fix: handle potential null member in GetTranscript class for ticket ownership and author display without using requireNonNull